# fractal

./: .gitignore  Cargo.toml  README.md
src/: gen.rs  lib.rs  palette.rs  view.rs
